<resources>
    <string name="app_name">BookACafe</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="seeDetails">see details</string>
    <string name="loginTitle">Login</string>
    <string name="loginButton">LOGIN</string>
    <string name="loginDescription">Doesn\'t have an account? Click Here!</string>
    <string name="loginAlternative">or sign in with</string>
    <string name="registerTitle">Register</string>
    <string name="retypePassword">Re-type Password</string>
    <string name="registerButton">REGISTER</string>
    <string name="cartTitle">Cart</string>
    <string name="cartSeats">Seats</string>
    <string name="cartFnb">Food and Beverages</string>
    <string name="cartBooks">Books</string>
    <string name="cartTotal">Total</string>
    <string name="cartOrderConfirm">Sure want to order?</string>
    <string name="cartOrder">ORDER</string>
    <string name="cartPayConfirm">Want to pay?</string>
    <string name="cartPay">SHOW BILL</string>
    <string name="disabled_user_menu">Disabled User</string>
    <string name="users_name">Nama User</string>
    <string name="description">
        Deskripsi
    </string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string-array name="userName">
        <item>Ivan Iskandar</item>
        <item>Nicholas John</item>
        <item>Maria S. S.</item>
        <item>Prisillia Ariesta</item>
        <item>Isabela Gunadi</item>
        <item>Ivan Iskandar</item>
        <item>Nicholas John</item>
        <item>Maria S. S.</item>
        <item>Prisillia Ariesta</item>
        <item>Isabela Gunadi</item>
    </string-array>
    <string-array name="userOrderHistory">
        <item>
            Finished Order: 10\nCanceled Order: 5
        </item>
        <item>
            Finished Order: 8\nCanceled Order: 7
        </item>
        <item>
            Finished Order: 12\nCanceled Order: 3
        </item>
        <item>
            Finished Order: 9\nCanceled Order: 6
        </item>
        <item>
            Finished Order: 11\nCanceled Order: 4
        </item>
        <item>
            Finished Order: 10\nCanceled Order: 5
        </item>
        <item>
            Finished Order: 8\nCanceled Order: 7
        </item>
        <item>
            Finished Order: 12\nCanceled Order: 3
        </item>
        <item>
            Finished Order: 9\nCanceled Order: 6
        </item>
        <item>
            Finished Order: 11\nCanceled Order: 4
        </item>
    </string-array>
    <string name="tables">Tables</string>
    <string name="table_text_1">Which table</string>
    <string name="table_text_2">do you want to choose?</string>
    <string name="table_a1">A1</string>
    <string name="table_a2">A2</string>
    <string name="table_a3">A3</string>
    <string name="table_a4">A4</string>
    <string name="table_b1">B1</string>
    <string name="table_b2">B2</string>
    <string name="table_b3">B3</string>
</resources>