<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login"
    android:padding="40dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/gray_rounded_button"
        android:text="@string/loginButton"
        app:backgroundTint="@null"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/loginDescription"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/loginAlternative"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/login_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/google_logo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

</LinearLayout>