<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".view.Register">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_back">

        <ImageView
            android:id="@+id/register_back_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_toRightOf="@+id/register_back_logo"
            android:layout_centerVertical="true" />

    </RelativeLayout>


    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="5dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retypePassword"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/register_retype_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/square_edit_text"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/gray_rounded_button"
        android:text="@string/registerButton"
        app:backgroundTint="@null"
        android:layout_marginTop="30dp" />

</LinearLayout>