<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MenuTable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/tables"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/table_text_1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/table_text_2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_table_a1"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_a1" />

            <Button
                android:id="@+id/btn_table_a2"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_a2" />

            <Button
                android:id="@+id/btn_table_a3"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_below="@+id/btn_table_a1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_a3" />

            <Button
                android:id="@+id/btn_table_a4"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_below="@+id/btn_table_a2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_a4" />

            <Button
                android:id="@+id/btn_table_b1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_b1" />

            <Button
                android:id="@+id/btn_table_b2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_toEndOf="@+id/btn_table_b1"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_b2" />

            <Button
                android:id="@+id/btn_table_b3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_toEndOf="@+id/btn_table_b2"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="@string/table_b3" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/btn_table_b1"
                android:layout_marginTop="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:backgroundTint="@color/black"
                android:text="Add to Cart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>