<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CashierHomeFragment"
    android:id="@+id/fragment_container"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo2"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/imageProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/icon_profile" />
        <TextView
            android:id="@+id/cashier_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_table_a1"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_a1"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_a2"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_a2"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_a3"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_below="@+id/btn_table_a1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_a3"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_a4"
                android:layout_width="90dp"
                android:layout_height="180dp"
                android:layout_below="@+id/btn_table_a2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_a4"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_b1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_b1"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_b2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_toEndOf="@+id/btn_table_b1"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_b2"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_table_b3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/btn_table_a3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:layout_toEndOf="@+id/btn_table_b2"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/table_b3"
                app:backgroundTint="@null" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_logout"
            android:text="@string/log_out"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>

